Fix x viewport overflow

--- a/style.scss
+++ b/style.scss
@@ -87,10 +87,14 @@
         text-align: center;
     }
     .image-container {
+        display: flex;
+        align-items: flex-end;
         max-width: 100%;
+        width: fit-content;
         margin: 0 auto;
+        height: 400px;
         .item-image {
-            height: auto;
+            max-height: 400px;
             max-width: 100%;
         }
     }
